Endpoint de games finalizado
